bug 466378, rdf:nodeID not working when node appears as object before as subject in RDF/XML source, patch=mininet@wanadoo.fr, r=me, sr=shaver, a1.9.1=beltzner